v0.1.6 2008-11-06 Jochen Rau <j.rau@web.de>

	* IMP some code clean-up
	* ADD You can add images to your term definitions
	
v0.1.5 2008-09-24 Jochen Rau <j.rau@web.de>

	* IMP The parser is now invoked also for bullet lists and headers (if <h[1-6]> is not an excluded tag)
	* IMP If maxRecurrences is set, the matches are now spread over the cObj constantly
	* FIX It's not necessary anymore to set maxRecurrences to invoke the parser
	
v0.1.4 2008-09-23 Jochen Rau <j.rau@web.de>

	* FIX Fixed typo in TS Setup

v0.1.3 2008-09-22 Jochen Rau <j.rau@web.de>

	* ADD The maximum number of recurrences of a term (for a cObj) can be set by maxRecurrences in the TS Setup

v0.1.2 2008-09-09 Jochen Rau <j.rau@web.de>

	* FIX In some cases no term was found; the use of the modifier "u" didn't work if the content is not UTF-8; now support for UTF-8 must be activated manually by changing the RegEx-modifier "Uis" to "Uuis"; fixes bug #1483

v0.1.1 2008-09-01 Jochen Rau <j.rau@web.de>

	* ADD Added a RealUrl example configuration to "doc" folder
	* IMP Non filled markers (###TITLE###) are now removed

v0.1.0 2008-08-31 Jochen Rau <j.rau@web.de>

	* CHG Set status to beta

v0.0.18 and v0.0.19 2008-08-31 Jochen Rau <j.rau@web.de>

	* ADD fieldsToEdit
	* ADD New data source "references" added to experimental types
	* CHG Cleaned up template file
	* ADD Phrases can now be added by selecting them (experimental)
	* ADD Terms can now be edited in the FE-list and in the content elements (you have to enable Admin Panel Editing)
	* CHG Activated keywords option
	* CHG Changed the way to generate links

v0.0.17 2008-02-14 Jochen Rau <j.rau@web.de>

	* CHG Major revision of the parser; refactured code
	* ADD Support for tt_news (be sure to add the static template of contagged after the static template of tt_news)
	* FIX Link "More Details" showed list instead of extended single view if $termKey was "0"
	* CHG Set autoExcludeTags = 1 to avoid nested parsing